6940894: G1: assert(new_obj != 0 || ... "should be forwarded") for compaction tests

Humongous regions may contain multiple objects as a result of being retained as to-space from a previous GC and then re-used as to-space after being tagged as humongous. These changes include a check that causes retained to-space regions that are now tagged as humongous to be disregarded and a new to-space region allocated.

Reviewed-by: tonyp, iveresov